<resources>
    <string name="app_name">Money Cache</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="edit_budget_amount">%1$s</string>
    <string name="edit_budget_category">Category Name</string>
    <string name="income_title">Income:</string>
    <string name="income_text">%1$s</string>
    <string name="bills_title">Bills:</string>
    <string name="bills_text">%1$s</string>
    <string name="discretionary_title">Discretionary:</string>
    <string name="discretionary_text">%1$s</string>
    <string name="debt_reduction_title">Debt Reduction:</string>
    <string name="debt_reduction_text">%1$s</string>
    <string name="savings_title">Savings:</string>
    <string name="savings_text">%1$s</string>
    <string name="income_edit">Edit</string>
    <string name="bill_edit">Edit</string>
    <string name="discretionary_edit">Edit</string>
    <string name="debt_reduction_edit">Edit</string>
    <string name="savings_edit">Edit</string>
    <string name="edit_budget_update">Update</string>
    <string name="edit_done">Done</string>
    <string name="edit_transaction_button">Edit Transaction</string>
    <string name="delete_transaction_button">Delete Transaction</string>
    <string name="update_data_button">Update Transaction</string>
    <string name="bills_alert">Bills: $%1$s</string>
    <string name="discretionary_alert">Discretionary: $%1$s</string>
    <string name="debtreduction_alert">Debt Reduction: $%1$s</string>
    <string name="savings_alert">Savings: $%1$s</string>
    <string-array name="category_array">
        <item>Income</item>
        <item>Bills</item>
        <item>Discretionary</item>
        <item>Debt Reduction</item>
        <item>Savings</item>
    </string-array>
    <string name="spinner_text">Select a category…</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_date">01/01/21</string>
    <string name="edit_description">Some Business</string>
    <string name="edit_amount">$19.99</string>
    <!--Login-->
    <string name="go_button_label">GO</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="new_user">New User</string>
    <string name="login">Login</string>
    <!--Profile-->
    <string name="profile_title">User Profile</string>
    <string name="email_address">Email Address</string>
    <string name="update_profile">Update Profile</string>
    <!--Budget Impact-->
    <string name="what_if">What if......?</string>
    <string name="amount">$ Amount</string>
    <string name="recurring">Recurring</string>
    <string name="one_time">One-time</string>
    <string name="update">Update</string>
    <string name="clear">Clear</string>
    <string name="spending_impact">Spending Impact</string>
    <string name="savings_impact">Savings Impact</string>
    <string name="update_impact">Update Impact</string>
    <string name="budget_impact">Budget Impact</string>
    <string name="clear_impact">Clear Impact</string>
    <!--Dashboard-->
    <string name="dashboard">Dashboard</string>
    <string name="textview">TextView</string>
    <string name="string_textview">Budget Impact</string>
    <string name="income_expenses">Income - Expenses = $</string>
    <string name="future_pie_chart">Future Pie Chart</string>
    <!--<string name="goal_progress">Goal Progress</string>-->
    <string name="get_data_button">Upload Bank Data</string>

    <!--Pie Chart -->
    <string name="pie_chart_title">Income vs Expenses</string>
    <string name="inside_title">Expenses</string>
    <string name="alert_explanation">Category: Money Remaining in Category</string>
    <string name="piechart_explanation">Percentage of Total Spending by Category</string>
    <!--<string name="burn">Burn.</string>
    <string name="cons">Cons.</string>
    <string name="add">Add</string>-->

</resources>